@@ -602,6 +602,7 @@ EXTRA_DIST += \
 # UTILS
 # =====
 
+EXTRA_DIST += utils/cups-browsed.in
 sbin_PROGRAMS =
 if ENABLE_AVAHI
 sbin_PROGRAMS += \
@@ -615,6 +616,8 @@ cups_browsed_CXXFLAGS = $(cups_browsed_CFLAGS)
 cups_browsed_LDADD = \
 	$(CUPS_LIBS) \
 	$(AVAHI_LIBS)
+initrcdir = $(INITDDIR)
+initrc_SCRIPTS = utils/cups-browsed
 endif
 
 # ===
@@ -652,5 +655,28 @@ distclean-local:
 	rm -rf *.cache *~
 
 install-data-hook:
+if ENABLE_AVAHI
+if RCLINKS
+	for level in $(RCLEVELS); do \
+		$(INSTALL) -d -m 755 $(DESTDIR)$(INITDIR)/rc$${level}.d; \
+		$(LN_S) ../init.d/cups-browsed $(DESTDIR)$(INITDIR)/rc$${level}.d/S$(RCSTART)cups-browsed; \
+		$(LN_S) ../init.d/cups-browsed $(DESTDIR)$(INITDIR)/rc$${level}.d/K$(RCSTOP)cups-browsed; \
+	done; \
+	$(INSTALL) -d -m 755 $(DESTDIR)$(INITDIR)/rc0.d; \
+	$(LN_S) ../init.d/cups-browsed $(DESTDIR)$(INITDIR)/rc0.d/K$(RCSTOP)cups-browsed;
+endif
+endif
 	$(LN_S) pdf.utf-8.simple \
 		$(DESTDIR)$(pkgcharsetdir)/pdf.utf-8
+
+
+uninstall-hook:
+if ENABLE_AVAHI
+if RCLINKS
+	if test "x$(INITDIR)" != x; then \
+		$(RM) $(DESTDIR)$(BUILDROOT)$(INITDIR)/rc?.d/[SK]??cups-browsed || :; \
+		rmdir $(DESTDIR)$(BUILDROOT)$(INITDIR)/rc?.d || :;\
+	fi
+endif
+endif
+	$(RM) $(DESTDIR)$(pkgcharsetdir)/pdf.utf-8
